ezra-app/k8s-prod/meetezraportal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meetezraportal-ingress
  namespace: ezrabot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - meetezra.bot
    - www.meetezra.bot
    secretName: meetezraportal-tls
  rules:
  - host: www.meetezra.bot
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meetezraportal
            port:
              number: 80
  - host: meetezra.bot
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meetezraportal
            port:
              number: 80
